[project]
name = "jj-headliner-mongodb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ihor", email = "Ihor.Halaniuk@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.11.10",
    "pydantic-settings>=2.11.0",
    "pymongo>=4.15.2",
]

[build-system]
requires = ["uv_build>=0.8.23,<0.9.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D10"]

[tool.pyright]
typeCheckingMode = "basic"
